app/assets/stylesheets/application.scss
@import "materialize";

body {
  display: flex;
  min-height: 100vh;
  -webkit-flex-direction: column;
  flex-direction: column;
}
header {
  padding-top: 3em;
}
main {
  flex: 1;
  -webkit-flex: 1;
}
.c-url {
  padding: 0.5em 1em;
}

.home-bigLogo {
  height: 360px;
  width: 315px;
}

#items_list {
  td {
    line-height: 36px;
    vertical-align: top;
    word-break: break-all;
  }
  button {
    word-break: normal;
  }
}
.item-deleteForm {
  margin-top: 4em;
}

.is-hidden {
  display: none;
}
main.container {
  margin-top: 2.1rem;

  > h1:first-child {
    margin-top: 0;
  }
}

@media (max-width: 640px) {
  header {
    padding-top: 0;
  }
  h1 {
    font-size: 2em;
    line-height: 1.5em;
  }
  .container {
    width: auto;
  }
  table.container {
    width: 100%;
  }
  th:first-child,
  td:first-child {
    padding-left: 1.5rem;
  }
  th:last-child,
  td:last-child {
    padding-right: 1.5rem;
  }

  .home-bigLogo {
    height: auto;
    width: 60%;
  }
}

